# DRXposed

./: README.md  index.html  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  core.cpp  core.hpp
app/src/main/cpp/dependencies/lua/: lua.c  luaconf.h
app/src/main/cpp/utils/: utils.cpp  utils.h
app/src/main/java/com/github/janisslsm/drxposed/: MainHook.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
